# ComfyUI-MVDUST3R

./: .gitignore  LICENSE  README.md  __init__.py  comfy-test.toml  index.html  install.py  prestartup_script.py  pyproject.toml  requirements.txt
dev/: index.html
nodes/: __init__.py  blur_detection.py  export_mesh.py  export_pointcloud.py  inference.py  load_model.py  prepare_images.py  visualizer.py
workflows/: basic_reconstruction.json  pointcloud_reconstruction.json
