[project]
name = "comfyui-mvdust3r"
version = "0.1.0"
description = "ComfyUI nodes for MVDUST3R multi-view 3D reconstruction"
authors = [{name = "ComfyUI-MVDUST3R Contributors"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["comfyui", "3d-reconstruction", "multi-view", "point-cloud", "mesh"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.26.0",
    "scipy",
    "trimesh",
    "open3d",
    "roma",
    "einops",
    "opencv-python",
    "imageio[ffmpeg]",
    "huggingface-hub[torch]",
    "timm",
    "scikit-learn",
    "gsplat>=1.4.0",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/yourusername/ComfyUI-MVDUST3R"
Repository = "https://github.com/yourusername/ComfyUI-MVDUST3R"
Issues = "https://github.com/yourusername/ComfyUI-MVDUST3R/issues"

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["comfyui_mvdust3r", "comfyui_mvdust3r.nodes", "comfyui_mvdust3r.vendor"]
