[project]
name = "comfyui-mvdust3r"
version = "0.1.0"
description = "THIS NODE IS WIP. ComfyUI nodes for MVDUST3R multi-view 3D reconstruction"
authors = [{name = "ComfyUI-MVDUST3R Contributors"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["comfyui", "3d-reconstruction", "multi-view", "point-cloud", "mesh"]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.26.0",
    "scipy",
    "trimesh",
    "open3d",
    "roma",
    "einops",
    "opencv-python",
    "imageio[ffmpeg]",
    "huggingface-hub[torch]",
    "timm",
    "scikit-learn",
    "gsplat>=1.4.0",
    "tqdm",
    "plyfile",
]

[project.urls]
Homepage = "https://github.com/PozzettiAndrea/ComfyUI-MVDUST3R"
Repository = "https://github.com/PozzettiAndrea/ComfyUI-MVDUST3R"
Issues = "https://github.com/PozzettiAndrea/ComfyUI-MVDUST3R/issues"

# ComfyUI Registry configuration
[tool.comfy]
PublisherId = "pznodes"
DisplayName = "MVDUST3R"
Icon = ""