[project]
name = "comfyui-mvdust3r"
version = "0.1.0"
description = "THIS NODE IS WIP. ComfyUI nodes for MVDUST3R multi-view 3D reconstruction"
authors = [{name = "ComfyUI-MVDUST3R Contributors"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["comfyui", "3d-reconstruction", "multi-view", "point-cloud", "mesh"]

dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/PozzettiAndrea/ComfyUI-MVDUST3R"
Repository = "https://github.com/PozzettiAndrea/ComfyUI-MVDUST3R"
Issues = "https://github.com/PozzettiAndrea/ComfyUI-MVDUST3R/issues"

# ComfyUI Registry configuration
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.comfy]
PublisherId = "pznodes"
DisplayName = "MVDUST3R"
Icon = ""